tests/fail/ch_stable/invalid_type_in_placeholder.stderr
error: type index 3 out of range of 0 types:
       At "{3}"
            ^
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:24:26
   |
24 |     sscanf::scanf!("hi", "{3}");
   |                          ^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.}"
            ^
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:25:26
   |
25 |     sscanf::scanf!("hi", "{.}");
   |                          ^^^^^

error: type index 3 out of range of 0 types:
       At "{3:/hi/}"
            ^
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:27:26
   |
27 |     sscanf::scanf!("hi", "{3:/hi/}");
   |                          ^^^^^^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging:
       At "{.:/hi/}"
            ^
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:28:26
   |
28 |     sscanf::scanf!("hi", "{.:/hi/}");
   |                          ^^^^^^^^^^

error[E0412]: cannot find type `bob` in this scope
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:26:5
   |
26 |     sscanf::scanf!("hi", "{bob}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `bob` in this scope
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:29:5
   |
29 |     sscanf::scanf!("hi", "{bob:/hi/}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:21:26
   |
21 |     sscanf::scanf!("hi", "{NoRegex}");
   |                          ^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NoFromStr
             NonZeroI128
             NonZeroI16
             NonZeroI32
             NonZeroI64
           and 27 others

error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
  --> tests/fail/ch_stable/invalid_type_in_placeholder.rs:17:26
   |
17 |     sscanf::scanf!("hi", "{std::vec::Vec<usize>}");
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NoFromStr
             NonZeroI128
             NonZeroI16
             NonZeroI32
             NonZeroI64
           and 27 others
